# Cplusplus-projects

Audio_mix/Audio_mix/: Audio_mix.cpp
Filter/resource/: myplugineditor.uidesc
Filter/source/: myplugincontroller.cpp  mypluginentry.cpp  mypluginprocessor.h  version.h
HelloWorld/: HelloWorld.cpp  HelloWorld.vcxproj
Misc/Classes1/: Classes1.cpp  Classes1.sln  Classes1.vcxproj  Classes1.vcxproj.filters
Misc/Classes2/: Classes2.cpp  Classes2.sln  Classes2.vcxproj
Misc/DataStructures/: DataStructures.cpp  DataStructures.sln  DataStructures.vcxproj
Misc/DynamicMemory/: DynamicMemory.cpp  DynamicMemory.sln  DynamicMemory.vcxproj
Misc/Filter/: CMakeLists.txt
Misc/Filter/source/: myplugincids.h  myplugincontroller.h  mypluginprocessor.cpp
Misc/HelloWorld/: HelloWorld.sln
Misc/Session2Activity/: Session2Activity.sln
Misc/Sinewave/Sinewave/: Sinewave.cpp  Sinewave.vcxproj
Misc/SinewaveClass/: SinewaveClass.sln
Misc/SinewaveClass/SinewaveClass/: SinewaveClass.cpp  SinewaveClass.vcxproj  SinewaveClass.vcxproj.filters
Misc/WavReaderHeader/WavReaderHeader/: WavReaderHeader.vcxproj
Misc/WavReaderandVectoriser/WavReaderandVectoriser/: WavReaderandVectoriser.cpp  WavReaderandVectoriser.vcxproj.filters
Oscillator/: Oscillator.cpp  Oscillator.sln  Oscillator.vcxproj  Oscillator.vcxproj.filters
Session2Activity/Session2Activity/: Session2Activity.cpp  Session2Activity.vcxproj  Session2Activity.vcxproj.filters
Sinewave/: Sinewave.sln
Sinewave/Sinewave/: Sinewave.vcxproj.filters
Tape_Delay/: Tape_Delay.jucer  tapetest_with_filter.m
Tape_Delay/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Tape_Delay/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
WavReaderHeader/: WavReaderHeader.sln
WavReaderHeader/WavReaderHeader/: WavReaderHeader.vcxproj.filters
WavReaderandVectoriser/: WavReaderandVectoriser.sln
WavReaderandVectoriser/WavReaderandVectoriser/: WavHeader.h  WavReaderandVectoriser.vcxproj
